# Dataset

./: .env.example  LICENSE  README.md  config.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0742468f59fd_init_db.py
database/: connection.py  model.py  query.py
hf_model/: generator.py  init_model.py
