[project]
name = "dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "alembic>=1.16.5",
    "huggingface-hub>=0.34.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
    "sqlalchemy>=2.0.43",
    "torch>=2.8.0",
    "transformers>=4.56.0",
]

[tool.setuptools.packages.find]
include = ["database*", "hf_model*"]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
